--- a/lang/pt.json
+++ b/lang/pt.json
@@ -44,7 +44,7 @@
         "ColumnAverageGenerationTimeDocumentation": "O tempo médio que demorou a renderizar a página. Esta métrica inclui o tempo que o servidor demorou a gerar a página web e o tempo que demorou ao visitante transferir a resposta do servidor. Um tempo de renderização médio mais baixo significa um site mais rápido para os seus visitantes!",
         "ColumnAverageTimeOnPage": "Tempo médio na página",
         "ColumnAverageTimeOnPageDocumentation": "O tempo médio que um visitante esteve nesta página (apenas na página e não em todo o site).",
-        "ColumnAvgTimeOnSite": "Tempo médio no site",
+        "ColumnAvgTimeOnSite": "Tempo Médio no Site da Web",
         "ColumnSumTimeOnSite": "Tempo total no site",
         "ColumnAvgTimeOnSiteDocumentation": "A duração média de uma visita.",
         "ColumnBounceRate": "Taxa de ressalto",
@@ -66,7 +66,7 @@
         "ColumnKeyword": "Palavra-chave",
         "ColumnLabel": "Etiqueta",
         "ColumnHits": "Acessos",
-        "ColumnMaxActions": "Máximo de ações numa visita",
+        "ColumnMaxActions": "Número máximo de ações numa visita",
         "ColumnNbActions": "Ações",
         "ColumnNbActionsDocumentation": "O número de ações realizadas pelos seus visitantes. As ações podem ser visualização de páginas, transferências ou ligações de saída.",
         "ColumnNbUniqVisitors": "Visitantes únicos",
@@ -149,7 +149,7 @@
         "DisplayTableWithMoreMetrics": "Mostrar uma tabela com métricas de interesse do visitante",
         "Documentation": "Documentação",
         "Donate": "Doar",
-        "Done": "Feito",
+        "Done": "Concluído",
         "Download": "Transferir",
         "DownloadFail_FileExists": "O ficheiro %s já existe!",
         "DownloadFail_FileExistsContinue": "A tentar continuar a transferência para %s, mas um ficheiro completamente transferido já existe!",
@@ -506,7 +506,7 @@
         "YourSessionHasExpired": "A sua sessão expirou por inatividade. Por favor, inicie novamente sessão para continuar.",
         "ThankYouForUsingMatomo": "Obrigado por utilizar o Matomo",
         "TheMatomoTeam": "A Equipa do Matomo",
-        "PleaseTryAgain": "Por favor tente novamente",
+        "PleaseTryAgain": "Por favor, tente novamente",
         "ComparisonRatioTooltip": "Isto é uma alteração de %1$s relativamente ao segmento '%2$s' de %3$s.",
         "ComparisonCardTooltip1": "'%1$s' em %2$s contém %3$s de todas as visitas (%4$s de um total de %5$s).",
         "ComparisonCardTooltip2": "O total de visitas é diferente por %1$s comparativamente a %2$s sob %3$s.",
@@ -547,7 +547,7 @@
         "HowtoLoginAnonymous": "Deixe o nome de utilizador e senha vazios para uma autenticação anónima",
         "HttpIsNotSecureWarning": "O código de autorização do Matomo (token_auth) é enviado em texto simples se utilizar 'HTTP'. Por este motivo recomendamos HTTPS para a transmissão segura de informação na Internet. Pretende continuar?",
         "HttpTimeout": "Tempo limite HTTP",
-        "IncompatiblePiwikVersion": "A versão do Matomo que está a utilizar é incompatível com o Matomo Mobile 2. Atualize a sua instalação do Matomo e tente novamente ou instale o Matomo Mobile 1.",
+        "IncompatiblePiwikVersion": "A versão do Matomo que está a utilizar é incompatível com Matomo Mobile 2. Atualize a sua instalação do Matomo e tente novamente ou instale Matomo Mobile 1.",
         "LastUpdated": "Última atualização: %s",
         "LoadingReport": "A carregar %s",
         "LoginCredentials": "Credenciais",
@@ -587,7 +587,7 @@
         "ShowLess": "Mostrar menos",
         "StaticGraph": "Gráfico de visão geral",
         "TopVisitedWebsites": "Sites mais visitados",
-        "TryIt": "Experimente!",
+        "TryIt": "Experimente-o!",
         "UseSearchBarHint": "Apenas os primeiros %s sites são apresentados aqui. Por favor utilize a barra de pesquisa para aceder aos seus outros sites.",
         "VerifyAccount": "A verificar a conta",
         "ValidateSslCertificate": "Validar certificado SSL",
