--- a/lang/zh-cn.json
+++ b/lang/zh-cn.json
@@ -111,7 +111,7 @@
         "ConfigFileIsNotWritable": "Matomo 配置文件 %1$s 无法写入，无法保存部分修改。%2$s 请修改配置文件的权限为可写。",
         "Continue": "继续",
         "ContinueToPiwik": "继续使用Matomo",
-        "CurrentlyUsingUnsecureHttp": "您当前正在通过不安全的HTTP使用Matomo。 这会使您的Matomo容易受到安全漏洞的攻击。 您可能还违反了隐私法，因为某些功能（包括选择退出Cookie）将无法使用。 我们建议您将Matomo设置为使用SSL（HTTPS），以提高安全性。",
+        "CurrentlyUsingUnsecureHttp": "当前正在通过不安全的HTTP使用Matomo，这会让Matomo容易受到安全漏洞的攻击。 这可能还违反了隐私法，因为某些功能（包括选择退出Cookie）将无法使用。 我们建议您将Matomo设置为使用SSL（HTTPS）以提高安全性。",
         "CreationDate": "创建日期",
         "CreatedByUser": "版权所有 %s",
         "CurrentMonth": "本月",
@@ -468,7 +468,7 @@
         "WarningPhpVersionXIsTooOld": "您正在使用的PHP版本%s 已达到其生命周期结束（EOL）。我们强烈敦促升级到最新版本，因为使用这个版本可能会使您已修复在最近版本的PHP中的安全漏洞和错误。",
         "WarningPiwikWillStopSupportingPHPVersion": "Matomo将停止下一个主要版本，支持PHP%1$s。升级你的PHP来至少PHP%2$s还为时不晚。",
         "YouMustUpgradePhpVersionToReceiveLatestPiwik": "您需要升级您的 PHP 版本才能接收最新的 Matomo 更新。",
-        "PiwikCannotBeUpgradedBecausePhpIsTooOld": "您当前的 PHP 版本不兼容最新的 Matomo。",
+        "PiwikCannotBeUpgradedBecausePhpIsTooOld": "Matomo无法升级到最新的重大版本更新，因为当前PHP版本太旧。",
         "PleaseUpgradeYourPhpVersionSoYourPiwikDataStaysSecure": "请您将 PHP 版本升级到 %s 以上，以便保持您的 Matomo 统计数据安全。",
         "ValidatorErrorEmptyValue": "请提供一个值。",
         "ValidatorErrorNotANumber": "不是正确的数字。",
