--- a/plugins/DevicesDetection/lang/pt.json
+++ b/plugins/DevicesDetection/lang/pt.json
@@ -47,7 +47,7 @@
         "Phablet": "Phablet",
         "TV": "Tv",
         "UserAgent": "User-Agent",
-        "MobileApp": "Aplicação móvel",
+        "MobileApp": "Aplicação Móvel",
         "XVisitsFromDevices": "%1$s visitas de %2$s dispositivos",
         "Wearable": "Usável",
         "WidgetBrowsers": "Navegador do visitante",
