--- a/plugins/Login/lang/pt.json
+++ b/plugins/Login/lang/pt.json
@@ -13,7 +13,7 @@
         "LoginOrEmail": "Nome de utilizador ou e-mail",
         "HelpIpRange": "Introduza um endereço ou um intervalo de endereços de IP por linha. Pode utilizar a notação CIDR, por exemplo %1$s, ou pode utilizar carateres genéricos, por exemplo %2$s ou %3$s",
         "SettingBruteForceEnable": "Ativar deteção de força bruta",
-        "SettingBruteForceEnableHelp": "A deteção de força bruta é uma funcionalidade de segurança importante para proteger os seus dados de acesso não autorizados. Em vez de permitir que qualquer utilizador tente milhares ou milhões de combinações de palavras-passe num intervalo de tempo muito curto, apenas irá permitir uma quantidade específica de autenticações falhadas durante um curto intervalo de tempo. Se ocorreram demasiadas falhas de autenticação nesse intervalo de tempo, o utilizador não poderá iniciar sessão até que decorra algum tempo. Por favor, note que, se um endereço de IP for bloqueado, qualquer utilizador que utilize esse IP também irá ser impedido de iniciar sessão.",
+        "SettingBruteForceEnableHelp": "A »Deteção de Força Bruta» é uma funcionalidade de segurança importante para proteger os seus dados do acesso não autorizado. Em vez de permitir que qualquer utilizador tente milhares ou milhões de combinações de palavras-passe num intervalo de tempo muito curto, isto irá permitir apenas uma quantidade específica de autenticações falhadas durante um curto intervalo de tempo. Se ocorreram demasiadas falhas de autenticação nesse intervalo de tempo, o utilizador não poderá iniciar a sessão até que decorra algum tempo. Por favor, note que, se um endereço de IP for bloqueado, qualquer utilizador que utilize esse IP também será impedido de iniciar a sessão.",
         "SettingBruteForceWhitelistIp": "Nunca impedir estes endereços de IP de iniciar sessão",
         "SettingBruteForceBlacklistIp": "Impedir sempre estes endereços de IP de iniciar sessão",
         "SettingBruteForceMaxFailedLogins": "Número de tentativas de autenticação permitidas dentro do intervalo de tempo",
@@ -29,7 +29,7 @@
         "LoginPasswordNotCorrect": "Combinação de nome de utilizador e palavra-passe incorreta.",
         "LostYourPassword": "Perdeu a sua palavra-passe?",
         "ChangeYourPassword": "Alterar a sua palavra-passe",
-        "MailPasswordChangeBody2": "Olá %1$s,\n\nFoi recebido um pedido de reposição de palavra-passe de %2$s. Para confirmar esta alteração de palavra-passe para que possa iniciar sessão com as novas credenciais, por favor, copie e cole a seguinte ligação no seu navegador:\n\n%3$s\n\nNota: esta ligação vai expirar em 24 horas.\n\nE obrigado por utilizar o Matomo!",
+        "MailPasswordChangeBody2": "Olá %1$s,\n\nFoi recebido um pedido de reposição de palavra-passe de %2$s. Para confirmar esta alteração de palavra-passe para que possa iniciar a sessão com as suas novas credenciais, por favor, copie e cole a seguinte hiperligação no seu navegador:\n\n%3$s\n\nNota: esta hiperligação irá expirar em 24 horas.\n\nE obrigado por utilizar o Matomo!",
         "MailTopicPasswordChange": "Confirmar alteração de palavra-passe",
         "NewPassword": "Nova palavra-passe",
         "NewPasswordRepeat": "Nova palavra-passe (repetir)",
