--- a/plugins/MobileMessaging/lang/pt.json
+++ b/plugins/MobileMessaging/lang/pt.json
@@ -8,7 +8,7 @@
         "PhoneNumbers": "Números de telefone",
         "PluginDescription": "Crie e transfira relatórios de SMS personalizados e faça com que os mesmos sejam enviados para o seu telemóvel diariamente, semanalmente ou mensalmente.",
         "Settings_APIKey": "Chave da API",
-        "Settings_CountryCode": "Código do país",
+        "Settings_CountryCode": "Código do País",
         "Settings_SelectCountry": "Selecionar país",
         "Settings_CredentialNotProvided": "Antes de poder criar e gerir números de telefone, por favor ligue o Matomo à sua conta SMS acima.",
         "Settings_CredentialNotProvidedByAdmin": "Antes de poder criar e gerir números de telefone, por favor peça ao seu administrador para ligar o Matomo a uma conta SMS.",
@@ -18,10 +18,10 @@
         "Settings_DelegatedSmsProviderOnlyAppliesToYou": "O fornecedor de SMS configurado apenas será utilizado por si e não por quaisquer outros utilizadores.",
         "Settings_DelegatedPhoneNumbersOnlyUsedByYou": "Os números de telefone configurados apenas podem ser vistos e utilizados por si e não por quaisquer outros utilizadores.",
         "Settings_EnterActivationCode": "Introduza o código de ativação",
-        "Settings_InvalidActivationCode": "O código introduzido não é válido, por favor, tente novamente.",
+        "Settings_InvalidActivationCode": "O código inserido não é válido, por favor, tente novamente.",
         "Settings_LetUsersManageAPICredential": "Permitir que os utilizadores façam a gestão do seu próprio fornecedor de SMS",
         "Settings_LetUsersManageAPICredential_No_Help": "Todos os utilizadores poderão receber relatórios por SMS e irão utilizar os créditos da sua conta.",
-        "Settings_LetUsersManageAPICredential_Yes_Help": "Cada utilizador poderá configurar a sua própria conta de API SMS e não utilizarão o seu crédito.",
+        "Settings_LetUsersManageAPICredential_Yes_Help": "Cada utilizador irá poder configurar a sua própria «Conta de API SMS» e não irá utilizar o seu crédito.",
         "Settings_ManagePhoneNumbers": "Gerir números de telefone",
         "Settings_PhoneActivated": "Número de telefone validado! Já pode receber SMS com as suas estatísticas.",
         "Settings_PhoneNumber": "Número de telefone",
