--- a/plugins/ScheduledReports/lang/cs.json
+++ b/plugins/ScheduledReports/lang/cs.json
@@ -22,8 +22,8 @@
         "MustBeLoggedIn": "Musíte být přihlášen, abyste mohl vytvářet vlastní hlášení.",
         "NoRecipients": "Toto hlášení nemá příjemce",
         "Pagination": "Stránka %1$s z %2$s",
-        "PiwikReports": "Hlášení Matomou",
-        "PleaseFindAttachedFile": "Vaše %1$s hlášení pro %2$snaleznete v přiloženém souboru.",
+        "PiwikReports": "Hlášení Matomo",
+        "PleaseFindAttachedFile": "Vaše %1$s hlášení pro %2$s naleznete v přiloženém souboru.",
         "SentFromX": "Odesláno z %s.",
         "PleaseFindBelow": "Najděte níže vaše %1$s hlášení pro %2$s.",
         "PluginDescription": "Vytvořte vlastní emailová hlášení a naplánujte jejich zaslání denně, týdně nebo měsíčně jednomu nebo více lidem. Je podporováno několik formátů (HTML, PDF, CSV, obrázky).",
@@ -31,7 +31,7 @@
         "ReportHour": "Odeslat hlášení v %s hodin",
         "ReportHourWithUTC": "%s hodin UTC",
         "ReportIncludeNWebsites": "Hlášení bude obsahovat hlavní měření pro všechny weby, které mají aspoň jednu návštěvu (z %s aktuálně dostupných webů).",
-        "ReportSent": "Hlášení posláno",
+        "ReportSent": "Hlášení odesláno",
         "ReportsIncluded": "Zahrnuté statistiky",
         "ReportType": "Odeslat hlášení pomocí",
         "ReportUpdated": "Hlášení aktualizováno",
@@ -46,6 +46,18 @@
         "TopLinkTooltip": "Vytvářejte vlastní hlášení, která budou automaticky doručena na vaši nebo zákazníkovu emailovou adresu.",
         "TopOfReport": "Zpět nahoru",
         "UpdateReport": "Aktualizovat hlášení",
-        "WeeklyScheduleHelp": "Týdenní plán: hlášení bude odesláno každé pondělí"
+        "WeeklyScheduleHelp": "Týdenní plán: hlášení bude odesláno každé pondělí",
+        "Unsubscribe": "Odhlásit odběr",
+        "ReportUnsubscribe": "Odhlásit odběr hlášení",
+        "UnsubscribeReportConfirmation": "Jste si jisti, že chcete odhlásit odběr hlášení %1$s?",
+        "SuccessfullyUnsubscribed": "Úspěšně jste odhlásili odběr hlášení %1$s.",
+        "UnsubscribeFooter": "Chcete-li odhlásit odběr tohoto hlášení, klikněte na tento odkaz: %1$s",
+        "NoTokenProvided": "V adrese URL nebyl uveden žádný token",
+        "NoSubscriptionFound": "Nebyl nalezen žádný odběr. Možná že odběr hlášení byl již odhlášen nebo odstraněn.",
+        "EvolutionGraphsShowForEachInPeriod": "Grafy vývoje ukazují vývoj pro %1$skaždý den%2$s v posledních %3$s",
+        "EvolutionGraphsShowForPreviousN": "Evoluční grafy ukazují vývoj oproti předchozímu N %s",
+        "ReportPeriod": "Perioda hlášení",
+        "ReportPeriodHelp": "Období, na které se toto hlášení vztahuje. Ve výchozím nastavení je totožné s plánem e-mailů, takže pokud je přehled odesílán týdně, bude obsahovat informace týkající se minulého týdne.",
+        "ReportPeriodHelp2": "Můžete to však změnit, pokud chcete vidět různé informace a přesto si zachovat e-mailový plán. Pokud je například e-mailový rozvrh týdenní a období hlášení je „den“, obdržíte informace o posledním dni, každý týden."
     }
 }
