--- a/plugins/UserCountry/lang/pt.json
+++ b/plugins/UserCountry/lang/pt.json
@@ -10,7 +10,7 @@
         "country_a1": "Proxy anónimo",
         "country_a2": "Fornecedor por satélite",
         "country_cat": "Comunidades língua Catalã",
-        "country_o1": "Outro país",
+        "country_o1": "Outro País",
         "VisitLocation": "Localização da visita",
         "CurrentLocationIntro": "De acordo com este fornecedor, a sua localização atual é",
         "DefaultLocationProviderDesc1": "O fornecedor de localização predefinido estima o país de um visitante com base no idioma que este utiliza.",
