--- a/lang/cs.json
+++ b/lang/cs.json
@@ -118,7 +118,7 @@
         "CurrentWeek": "Tento týden",
         "CurrentYear": "Tento rok",
         "Daily": "Denně",
-        "DailyReport": "denně",
+        "DailyReport": "denní",
         "DailyReports": "Denní hlášení",
         "DailySum": "denní součet",
         "DashboardForASpecificWebsite": "Nástěnka pro vybraný web",
@@ -273,7 +273,7 @@
         "MinutesSeconds": "%1$s minut %2$s sek.",
         "Mobile": "Mobil",
         "Monthly": "Měsíčně",
-        "MonthlyReport": "měsíčně",
+        "MonthlyReport": "měsíční",
         "MonthlyReports": "Měsíční hlášení",
         "More": "Více",
         "MoreDetails": "Více podrobností",
@@ -488,14 +488,14 @@
         "WarningDebugOnDemandEnabled": "Režim sledování %1$s povolen. Z bezpečnostních důvodů je doporučováno ponechat toto nastavení pouze po krátkou dobu. Pokud ho chcete zakázat, nastavte %2$s v %3$s na %4$s.",
         "Website": "Web",
         "Weekly": "Týdně",
-        "WeeklyReport": "Týdně",
+        "WeeklyReport": "týdenní",
         "WeeklyReports": "Tydenní hlášení",
         "WellDone": "Výborně!",
         "Widgets": "Widgety",
         "Widget": "Widget",
         "XComparedToY": "%1$s ve srovnání s %2$s",
         "XFromY": "%1$s z %2$s",
-        "YearlyReport": "ročně",
+        "YearlyReport": "roční",
         "YearlyReports": "Roční hlášení",
         "YearsDays": "%1$s roků %2$s dní",
         "Yes": "Ano",
