--- a/plugins/CoreAdminHome/lang/pt.json
+++ b/plugins/CoreAdminHome/lang/pt.json
@@ -21,7 +21,7 @@
         "ImageTrackingIntro3": "Para a lista completa de opções que pode utilizar com uma hiperligação de monitorização de imagem, consulte a %1$sDocumentação da API de Monitorização%2$s.",
         "ImageTrackingLink": "Hiperligação de Monitorização de Imagem",
         "ImportingServerLogs": "A importar registos do servidor",
-        "ImportingServerLogsDesc": "Uma alternativa ao acompanhamento de visitantes através do navegador (seja através de JavaScript ou de uma ligação de imagem) é através da importação contínua dos registos do servidor. Saiba mais sobre a %1$sAnálise de ficheiros de registo do servidor%2$s.",
+        "ImportingServerLogsDesc": "Uma alternativa para monitorizar os visitantes através do navegador (seja via JavaScript ou de uma hiperligação de imagem) é através da importação contínua dos registos do servidor. Saiba mais sobre a %1$sAnalítica de Ficheiros de Registo do Servidor%2$s.",
         "InvalidPluginsWarning": "As seguintes extensões não são compatíveis com %1$s e não puderam ser carregadas: %2$s.",
         "InvalidPluginsYouCanUninstall": "Pode atualizar ou desinstalar estas extensões na página de %1$sGerir Extensões%2$s.",
         "JavaScriptTracking": "Monitorização por JavaScript",
