--- a/plugins/SitesManager/lang/pt.json
+++ b/plugins/SitesManager/lang/pt.json
@@ -48,11 +48,11 @@
         "ListOfQueryParametersToBeExcludedOnAllWebsites": "Os parâmetros de consulta de endereços abaixo serão excluídos dos endereços de todos os sites.",
         "ListOfQueryParametersToExclude": "Introduza a lista de parâmetros de consulta de endereços, um por linha, para excluir dos relatórios de endereços de páginas. Expressões regulares como %s são suportadas.",
         "LogAnalytics": "Análise de registos",
-        "LogAnalyticsDescription": "Se o método de acompanhamento por JavaScript não for exequível, pode %1$sutilizar a análise de registos do servidor%2$s como um método alternativo para o acompanhamento dos utilizadores do seu site.",
+        "LogAnalyticsDescription": "Se o método de monitorização por JavaScript não for possível, pode %1$sutilizar a analítica de registo do servidor%2$s como um método alternativo para a monitorização dos utilizadores do seu <i>site<\/i> da Web.",
         "MainDescription": "Os seus relatórios de Analíticas Web necessitam de site! Adicione, atualize, elimine site e mostre o JavaScript para inserir nas suas páginas.",
         "MenuManage": "Gerir",
         "MobileAppsAndSDKs": "Aplicações móveis e SDKs",
-        "MobileAppsAndSDKsDescription": "Não está a acompanhar um site? Pode, alternativamente fazer o acompanhamento de uma aplicação móvel ou qualquer outro tipo de aplicação utilizando um dos %1$sSDKs disponíveis%2$s.",
+        "MobileAppsAndSDKsDescription": "Não está a monitorizar um <i>site<\/i> da Web? Pode monitorizar alternativamente uma aplicação móvel ou qualquer outro tipo de aplicação utilizando um dos %1$sSDKs disponíveis%2$s.",
         "NotAnEcommerceSite": "Não é um site de comércio-eletrónico",
         "NotFound": "Nenhum site encontrado para",
         "NoWebsites": "Não tem nenhum site para administrar.",
