--- a/plugins/CoreHome/lang/el.json
+++ b/plugins/CoreHome/lang/el.json
@@ -109,6 +109,7 @@
         "ReportWithMetadata": "Αναφορά με μεταδεδομένα",
         "ReadMoreOnlineGuide": "Διαβάστε περισσότερα για το θέμα στον online οδηγό.",
         "SeeAvailableVersions": "Εμφάνιση Διαθέσιμων Εκδόσεων",
-        "QuickLinks": "Γρήγοροι Σύνδεσμοι"
+        "QuickLinks": "Γρήγοροι Σύνδεσμοι",
+        "Profilable": "Profilable"
     }
 }
