--- a/plugins/Login/lang/el.json
+++ b/plugins/Login/lang/el.json
@@ -20,6 +20,9 @@
         "SettingBruteForceMaxFailedLoginsHelp": "Αν έχει καταγραφεί μεγαλύτερος αριθμός αποτυχημένων αποπειρών σύνδεσης από τον αριθμό αυτό μέσα στο παρακάτω δεδομένο χρονικό διάστημα, να μπλοκαριστεί η διεύθυνση IP.",
         "SettingBruteForceTimeRange": "Να μετριούνται οι απόπειρες εισόδου μέσα σε αυτό το χρονικό διάστημα σε λεπτά",
         "SettingBruteForceTimeRangeHelp": "Εισάγετε ένα αριθμό σε λεπτά.",
+        "ConfirmPasswordReset": "Επιβεβαίωση αρχικοποίησης συνθηματικού",
+        "ConfirmPasswordResetIntro": "Για να επιβεβαιωθεί ότι είστε αυτός που πραγματικά ζήτησε την αλλαγή συνθηματικού, εισάγετε πάλι το νέο σας συνθηματικό.",
+        "ConfirmPasswordResetWrongPassword": "Το συνθηματικό που εισαγάγατε δεν ταιριάζει με το νέο σας συνθηματικό. Αν δεν θυμάστε το νέο συνθηματικό που επιλέξατε, μπορείτε να το αρχικοποιήσετε εκ νέου. Αν δεν ζητήσατε αλλαγή συνθηματικού, μην κάνετε τίποτα και το συνθηματικό σας δε θα αλλάξει.",
         "LoginNotAllowedBecauseBlocked": "Δεν μπορείτε αυτή τη στιγμή να κάνετε είσοδο, γιατί είχατε πολλές αποτυχημένες προσπάθειες εισόδου, δοκιμάστε αργότερα.",
         "CurrentlyBlockedIPs": "Μπλοκαρισμένες αυτή τη στιγμή διευθύνσεις IP",
         "IPsAlwaysBlocked": "Αυτές οι διευθύνσεις IP είναι πάντα μπλοκαρισμένες",
