--- a/plugins/Login/lang/sq.json
+++ b/plugins/Login/lang/sq.json
@@ -20,6 +20,9 @@
         "SettingBruteForceMaxFailedLoginsHelp": "Nëse regjistrohet një numër më i madh provash të dështuara për hyrje se sa ky numër, brenda intervalit kohor të formësuar më poshtë, bllokoje IP-në.",
         "SettingBruteForceTimeRange": "Numëro prova hyrjesh brenda këtij intervali kohor në minuta",
         "SettingBruteForceTimeRangeHelp": "Jepni një numër minutash.",
+        "ConfirmPasswordReset": "Ripohoni ricaktim fjalëkalimi",
+        "ConfirmPasswordResetIntro": "Për ripohim se jeni vërtet ju që kërkuat këtë ndryshim fjalëkalimi, ju lutemi, jepni sërish fjalëkalimin tuaj të ri.",
+        "ConfirmPasswordResetWrongPassword": "Fjalëkalimi i dhënë nuk përputhet me fjalëkalimin tuaj të ri. Nëse s’mbani mend fjalëkalimin tuaj të zgjedhur rishtas, mund ta ricaktoni sërish fjalëkalimin tuaj. Nëse s’kërkuat ndryshim fjalëkalimi, thjesht mos bëni gjë dhe fjalëkalimi juaj s’do të ndryshohet.",
         "LoginNotAllowedBecauseBlocked": "Hëpërhë s’ju lejohet të bëni hyrjen, ngaqë patët shumë prova të dështuara hyrjesh, riprovoni më vonë.",
         "CurrentlyBlockedIPs": "IP të bllokuara hëpërhë",
         "IPsAlwaysBlocked": "Këto IP janë përherë të bllokuara",
