--- a/plugins/CoreHome/lang/tr.json
+++ b/plugins/CoreHome/lang/tr.json
@@ -109,6 +109,7 @@
         "ReportWithMetadata": "Üst veriler ile rapor",
         "ReadMoreOnlineGuide": "Bu konu hakkında ayrıntılı bilgi almak için çevrimiçi rehbere bakabilirsiniz.",
         "SeeAvailableVersions": "Kullanılabilecek Sürümlere Bakın",
-        "QuickLinks": "Kestirme Bağlantıları"
+        "QuickLinks": "Kestirme Bağlantıları",
+        "Profilable": "Profillenebilir"
     }
 }
