--- a/plugins/DevicesDetection/lang/tr.json
+++ b/plugins/DevicesDetection/lang/tr.json
@@ -47,7 +47,11 @@
         "Phablet": "Phablet",
         "TV": "TV",
         "UserAgent": "User-Agent",
+        "Library": "Kitaplık",
+        "FeedReader": "Akış Okuyucu",
         "MobileApp": "Mobil Uygulama",
+        "Pim": "Kişisel Bilgi Yöneticisi",
+        "MediaPlayer": "Ortam Oynatıcı",
         "XVisitsFromDevices": "%2$s aygıttan %1$s ziyaret",
         "Wearable": "Giyilebilir",
         "WidgetBrowsers": "Ziyaretçi Tarayıcısı",
