--- a/plugins/Login/lang/tr.json
+++ b/plugins/Login/lang/tr.json
@@ -20,6 +20,9 @@
         "SettingBruteForceMaxFailedLoginsHelp": "Belirtilen sayıdan daha fazla hatalı oturum açma girişimi yapıldığında, girişimin yapıldığı IP adresi aşağıda belirtilen süreyle engellenir.",
         "SettingBruteForceTimeRange": "Oturum açma girişimlerinin sayılacağı zaman aralığı",
         "SettingBruteForceTimeRangeHelp": "Dakika olarak bir sayı yazın.",
+        "ConfirmPasswordReset": "Parola değişikliğini onayla",
+        "ConfirmPasswordResetIntro": "Bu parola değişikliğini isteyenin siz olduğunuzdan emin olunması için lütfen yeni parolanızı yeniden yazın.",
+        "ConfirmPasswordResetWrongPassword": "Yazılan parola yeni parolanız ile aynı değil. Yeni parolanızı anımsamıyorsanız parolanızı yeniden sıfırlayabilirsiniz. Parola değişikliği istemediyseniz herhangi bir şey yapmanıza gerek yok, parolanız değiştirilmeyecek.",
         "LoginNotAllowedBecauseBlocked": "Çok fazla sayıda hatalı oturum açma girişiminde bulunduğunuzdan, şu anda oturum açmanıza izin verilmiyor. Bir süre sonra yeniden deneyin.",
         "CurrentlyBlockedIPs": "Engellenmiş IP adresleri",
         "IPsAlwaysBlocked": "Her zaman engellenecek IP adresleri",
