--- a/plugins/Widgetize/lang/en.json
+++ b/plugins/Widgetize/lang/en.json
@@ -2,6 +2,7 @@
     "Widgetize": {
         "OpenInNewWindow": "Open in a new window",
         "PluginDescription": "Display any Matomo report in your website or app with a simple Embed HTML tag.",
+        "ViewAccessRequired": "This user has at least some write access. Only tokens of users who have only view access can be used.",
         "TopLinkTooltip": "Export Matomo Reports as Widgets and embed the Dashboard in your app as an iframe."
     }
 }
