--- a/lang/el.json
+++ b/lang/el.json
@@ -519,7 +519,8 @@
         "MaximumNumberOfPeriodsComparedIs": "Ο μέγιστος αριθμός περιόδων που μπορεί να συγκριθούν ταυτόχρονα είναι %s.",
         "Custom": "Προσαρμογή",
         "PreviousPeriod": "Προηγούμενη Περίοδος",
-        "PreviousYear": "Προηγούμενο Έτος"
+        "PreviousYear": "Προηγούμενο Έτος",
+        "ViewAccessRequired": "Το token_auth που χρησιμοποιείται έχει παραπάνω πρόσβαση από την απαραίτητη για χρήση σε αίτηση URL μη API-κλήσης. Χρησιμοποιήστε ένα συνθηματικό ειδικό για χρήση που έχει πρόσβαση μόνο για ανάγνωση."
     },
     "Mobile": {
         "AboutPiwikMobile": "Σχετικά με το Matomo για κινητά",
