--- a/plugins/CoreHome/lang/de.json
+++ b/plugins/CoreHome/lang/de.json
@@ -109,6 +109,7 @@
         "ReportWithMetadata": "Bericht mit Metadaten",
         "ReadMoreOnlineGuide": "Lesen Sie mehr zu diesem Thema in der Online-Anleitung.",
         "SeeAvailableVersions": "Zeige verfügbare Versionen",
-        "QuickLinks": "Schnelllinks"
+        "QuickLinks": "Schnelllinks",
+        "Profilable": "Profilierbar"
     }
 }
