--- a/plugins/DevicesDetection/lang/de.json
+++ b/plugins/DevicesDetection/lang/de.json
@@ -47,7 +47,11 @@
         "Phablet": "Phablet",
         "TV": "TV",
         "UserAgent": "User-Agent",
+        "Library": "Bibliothek",
+        "FeedReader": "Feed Leser",
         "MobileApp": "Mobile App",
+        "Pim": "PIM",
+        "MediaPlayer": "Medienplayer",
         "XVisitsFromDevices": "%1$s Besuche von %2$s Geräten",
         "Wearable": "Tragbare Geräte",
         "WidgetBrowsers": "Besucher-Browser",
