--- a/plugins/Login/lang/de.json
+++ b/plugins/Login/lang/de.json
@@ -20,6 +20,9 @@
         "SettingBruteForceMaxFailedLoginsHelp": "Wenn im konfigurierten Zeitraum mehr als diese Anzahl fehlgeschlagene Anmeldungen vermerkt werden, die IP blockieren.",
         "SettingBruteForceTimeRange": "Zähle Anmeldeversuche innerhalb dieses Zeitraums in Minuten",
         "SettingBruteForceTimeRangeHelp": "Geben Sie eine Nummer in Minuten an.",
+        "ConfirmPasswordReset": "Passwort zurücksetzen bestätigen",
+        "ConfirmPasswordResetIntro": "Um zu bestätigen, dass wirklich Sie es sind, der das Passort ändern muss, bitte das neue Passwort noch einmal eingeben.",
+        "ConfirmPasswordResetWrongPassword": "Das angegebene Passwort passt nicht zu Ihrem neuen Passwort. Wenn Sie sich nicht an das neu angegebene Passwort erinnern können, setzten Sie Ihr Passwort noch einmal zurück. Wenn Sie diese Anfrage des Passworts nicht ändern, müssen Sie nichts weiter tun und das Passwort wird nicht geändert.",
         "LoginNotAllowedBecauseBlocked": "Sie sind aktuell nicht berechtigt sich anzumelden aufgrund zu vieler fehlgeschlagener Anmeldungen, bitte später noch einmal versuchen.",
         "CurrentlyBlockedIPs": "Aktuell geblockte IP-Adressen",
         "IPsAlwaysBlocked": "Diese IP-Adressen sind dauerhaft blockiert",
