--- a/plugins/Widgetize/lang/el.json
+++ b/plugins/Widgetize/lang/el.json
@@ -2,6 +2,7 @@
     "Widgetize": {
         "OpenInNewWindow": "Άνοιγμα σε νέο παράθυρο",
         "PluginDescription": "Εμφάνιση οποιασδήποτε αναφοράς του Matomo στον ιστοτόπο σας ή στην εφαρμογή του κινητού με ενσωμάτωση μιας απλής σήμανσης HTML.",
+        "ViewAccessRequired": "Ο χρήστης αυτός έχει κάποια πρόσβαση για εγγραφή. Μόνο διαπιστευτήρια χρηστών που έχουν πρόσβαση μόνο για ανάγνωση μπορούν να χρησιμοποιηθούν.",
         "TopLinkTooltip": "Εξαγωγή Αναφορών του Matomo ως Μικροεφαρμογές και ενσωμάτωση του Κεντρικού Πίνακα στην εφαρμογή σας ως πλαίσιο."
     }
 }
