Adds missing translation keys

--- a/plugins/DevicesDetection/lang/en.json
+++ b/plugins/DevicesDetection/lang/en.json
@@ -20,6 +20,8 @@
         "dataTableLabelModels": "Model",
         "dataTableLabelSystemVersion": "Operating System version",
         "dataTableLabelTypes": "Type",
+        "ClientType": "Client type",
+        "ClientTypes": "Client types",
         "Device": "Device",
         "DeviceBrand": "Device brand",
         "DeviceBrands": "Device brands",
